DMP-1128 Transcription state model restrictions
Fixed merge issues